--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,19 +19,7 @@
     <nav class="navbar is-info" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
           <img src="{{ url_for('static', filename='images/logo.png') }}" width="40">
-        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-        </a>
-      </div>
-    
-      <div id="navbarBasicExample" class="navbar-menu">
-        <div class="navbar-start">
-          <a class="navbar-item" href="/">
-            Inicio
-          </a>
-        </div>
+          <a class="navbar-item" href="/">Inicio</a>
       </div>
     </nav>
     <div class="container">
