--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar is-info" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-          <img src="{{ url_for('static', filename='images/logo.png') }}" width="40">
+          <img src="{{ url_for('static', filename='images/logo.png') }}">
           <a class="navbar-item" href="/">Inicio</a>
       </div>
     </nav>
