Se agrega opción para quitar manga del listado.

--- a/templates/ver.html
+++ b/templates/ver.html
@@ -3,7 +3,7 @@
     <div class="columns">
       <div class="column">{{ contenido | markdown}}</div>
     </div>
-    
+    <a href="/marcar?pagina={{contenido}}" class="button is-light"><i class="far fa-window-close"></i></a>
     <div class="columns">
       <div class="column text-center">
         <h2>Visualizando {{ listado[pagina]|length }} imágenes</h2>
