Se agrega método para obtener todos los mangas

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,6 +20,7 @@
       <div class="navbar-brand">
           <img src="{{ url_for('static', filename='images/logo.png') }}">
           <a class="navbar-item" href="/">Inicio</a>
+          <a class="navbar-item" href="/todos">Todos</a>
       </div>
     </nav>
     <div class="container">
