Implementación de acerca de

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@
           <a class="navbar-item" href="/todos">Todos</a>
       </div>
     </nav>
-    <div class="container">
+    <div class="content">
       <section class="section">{% block body %} {% endblock %}</section>
     </div>
   </body>
